<resources>
    <string name="app_name">WhosThere</string>
    <string name="title_activity_login">Who\'s There?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_activity_main_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_friendlist">Friends List</string>
    <string name="description">This app allows users to connect with friends and see how far away these friends are. In addition, a notification will be sent to friends who are within a certain distance of each other. This distance can be changed in a settings menu. Along with this functionality, our group has also implemented a number of to augment the user experience and depth of the app. Some of these features include an incognito mode in which the user would be hidden from their friends’ maps as well as a do not disturb mode to halt incoming notifications from the app.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="addAFriend">Button</string>


    <!-- FAHO -->
    <string name="channel_name">NotificationChannel</string>
    <string name="channel_description">Notification channel for this app</string>
    <string name="intent_received_string">Got The Intent</string>
    <string name="separator_string">temp_separator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="whatgoeshere">temp</string>
    <string name="user_email">Email...</string>
    <string name="user_password">Password...</string>
    <string name="user_cpassword">Confirm password...</string>
    <string name="user_fname">Full name...</string>
    <string name="user_uname">Username</string>
    <string name="loading">Loading…</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="no_account_msg">Don\'t have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="register_error">Error: A user with that email already exists.</string>
    <string name="register_title">Enter your information:</string>
    <string name="plz_login">Login:</string>
    <string name="login_error_msg">Error: User/Password entered does not exist.</string>


    <!--arthur part-->

    <string name="distribution_set">Do Not Disturb Mode</string>
    <string name="setting">setting</string>
    <string name="logout">Log out</string>
    <string name="option">Option</string>

    <string-array name="distance">
        <item>1 mile</item>
        <item>5 miles</item>
        <item>10 miles</item>
    </string-array>
    <string-array name="distance_value">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>


    <string-array name="time">
        <item>1 min</item>
        <item>5 mins</item>
        <item>30 mins</item>
        <item>60 mins</item>
    </string-array>
    <string-array name="time_value">
        <item>1</item>
        <item>5</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="friend_option">
        <item>Set Family</item>
        <item>Remove Friend</item>
        <item>Block</item>
    </string-array>



    <!-- Drawer -->
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="default_notification_channel_id">Weather</string>
    <string name="fcm_message">FCM Message</string>

</resources>
